<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical" android:layout_width="match_parent"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/editTextName"
            android:hint="@string/label_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/ic_person_gray" />

        <EditText
            android:id="@+id/editTextAge"
            android:hint="@string/label_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <EditText
            android:id="@+id/editTextPhone"
            android:hint="@string/label_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextZipCode"
                android:hint="@string/label_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="number" />

            <Button
                android:id="@+id/buttonFindZipCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_find_zip_code"
                android:layout_weight="0"
                style="@style/DefaultButton" />

        </LinearLayout>

        <EditText
            android:id="@+id/editTextAddress"
            android:hint="@string/label_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextAddressType"
            android:hint="@string/label_address_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextDistrict"
            android:hint="@string/label_district"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextCity"
            android:hint="@string/label_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/editTextProvince"
            android:hint="@string/label_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>