<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:float="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editTextUserName"
                android:hint="@string/label_user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        float:fletTextAppearance="@color/material_300">
        <EditText
            android:id="@+id/editTextPassword"
            android:hint="@string/label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:password="true" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <Button
        android:id="@+id/buttonLogin"
        android:text="@string/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefaultButton" />

</LinearLayout>